--- a/kaboom.environment.dev/Vagrantfile
+++ b/kaboom.environment.dev/Vagrantfile
@@ -5,10 +5,19 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "mongodb" do |mongodb|
+	mongodb.vm.hostname = "mongodb"
     mongodb.vm.box = "ubuntu/bionic64"
 	mongodb.vm.network "private_network", ip: "192.168.50.50"
 	mongodb.vm.network "forwarded_port", guest: 27017, host: 27017
-	mongodb.vm.hostname = "mongodb"
 	mongodb.vm.provision "shell", path: "mongodb/bootstrap.sh", run: "always"
+  end
+  
+  config.vm.define "kafka" do |kafka|
+	kafka.vm.hostname = "kafka"
+    kafka.vm.box = "ubuntu/bionic64"
+	kafka.vm.network "private_network", ip: "192.168.50.51"
+	kafka.vm.network "forwarded_port", guest: 9092, host: 9092 # Kafka
+	kafka.vm.network "forwarded_port", guest: 2181, host: 2181 # Zookeeper
+	kafka.vm.provision "shell", path: "kafka/bootstrap.sh", run: "always"
   end
 end
