--- a/kaboom.environment.dev/Vagrantfile
+++ b/kaboom.environment.dev/Vagrantfile
@@ -10,6 +10,7 @@ Vagrant.configure("2") do |config|
 	mongodb.vm.network "private_network", ip: "192.168.50.50"
 	mongodb.vm.network "forwarded_port", guest: 27017, host: 27017
 	mongodb.vm.provision "shell", path: "mongodb/bootstrap.sh", run: "always"
+	mongodb.vm.provision "shell", path: "mongodb/create_db.sh", run: "always"
   end
   
   config.vm.define "kafka" do |kafka|
